# alpha-fold

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pipeline_config.json  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: tests-network.yml  tests.yml
avi/: __init__.py  __main__.py  cli.py  db.py  paths.py  pipeline.py  presets.json  webui.py
data/: proteins_manifest_example.csv
notebooks/: 01_target_exploration.ipynb  01_tp53_exploration.ipynb
scripts/: build_missense_subset.py  download_tp53_data.py  evaluation_metrics.py  nb_clean.py  pipeline_runtime.py  process_tp53_variants.py  run_pipeline.py  smoke_local.ps1  structure_features.py  structure_sasa.py  variant_metadata.py  variant_parse.py
tests/: test_cli_smoke.py  test_evaluation_metrics.py  test_report_behavior.py  test_structure_features.py  test_variant_metadata.py  test_variant_parse.py
